src/test/deca/codegen/valid/created/testInstanceOf/InstanceMemeClass.deca
// Description :
//   instance of sur meme class
//
// Résultats :
//    yes

class maclasse { }

{
    maclasse a = new maclasse();
    if (a instanceof maclasse) {
        println("yes");
    }
}